# chip-8

./: README.md  build.sh
source/: .cproject  .project  CMakeLists.txt  Disassembler.cpp  Disassembler.h  DisassemblyWindow.cpp  DisassemblyWindow.h  Emulator.cpp  Emulator.h  EmulatorWindow.cpp  EmulatorWindow.h  HexDumpWindow.cpp  HexDumpWindow.h  MainWindow.cpp  MainWindow.h  ProcessorInspectionWindow.cpp  ProcessorInspectionWindow.h  ProcessorInspectionWindow.ui  main.cpp
source/disassembler/: AssemblyUtils.cpp  AssemblyUtils.h  CMakeLists.txt  DisassemblyEngine.cpp  DisassemblyEngine.h  RomParser.cpp  RomParser.h
source/emulator/: CMakeLists.txt  CPU.cpp  CPU.h  Memory.cpp  Memory.h  Processor.cpp  Processor.h
